<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".controller.Activity.ConfigureMeetingActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".controller.Activity.ConfigureMeetingActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/configure_activity_edit_text_subject"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconContentDescription="buttonEndIconContributor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Sujet ..."
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_work_black_24dp"
                app:startIconTint="@color/colorPrimary"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/configure_activity_edit_text_contributor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Participants ..."
                app:endIconContentDescription="edit_text_contributor"
                app:endIconDrawable="@drawable/ic_person_add_black_24dp"
                app:endIconMode="custom"
                app:startIconDrawable="@drawable/ic_contact_mail_blue_24dp"
                app:startIconTint="@color/colorPrimary"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.delombaertdamien.mareu.view.NonScrollListView
                android:id="@+id/configure_activity_list_contributor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIconMode="dropdown_menu"
                app:startIconDrawable="@drawable/ic_place_black_24dp"
                app:startIconTint="@color/colorPrimary">

                <AutoCompleteTextView
                    android:id="@+id/configure_activity_spinner_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Local ..."
                    android:editable="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Heure de la réunion"
                android:drawableStart="@drawable/ic_access_time_blue_24dp"/>
            <Button
                android:id="@+id/configure_activity_button_set_start_clock"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="définir l'heure de début" />

            <Button
                android:id="@+id/configure_activity_button_set_end_clock"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape_with_border"
                android:text="définir l'heure de fin" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>
            <Button
                android:id="@+id/configure_activity_edit_text_valid_meeting"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimaryDark"
                android:text="AJOUTER"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>