<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/frame_layout_activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    />